# AaDS

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
assignment1/: CMakeLists.txt  README.md  test_script.sh
assignment1/include/: ascii85.hpp
assignment1/src/: ascii85.cpp  main.cpp
assignment1/tests/: ascii85_test.cpp  random_test.py
assignment2/: CMakeLists.txt  README.md  build.sh  test_script.sh
assignment2/data/: expected_solution1.csv  input_example1.csv
assignment2/include/: gaussian_elimination.hpp
assignment2/src/: gaussian_elimination.cpp  main.cpp
assignment2/tests/: gaussian_elimination_test.cpp
assignment3/: CMakeLists.txt  README.md  test_script.sh
assignment3/include/: shannon_fano.hpp
assignment3/src/: main.cpp  shannon_fano.cpp
